src/objects/Risk_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>User_Access_Information_Assets__c</fullName>
        <inlineHelpText>Access to information assets and functions by unauthorized users and support personnel shall be restricted.</inlineHelpText>
        <label>User Access Information Assets</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Authentication__c</fullName>
        <inlineHelpText>User Authentication</inlineHelpText>
        <label>User Authentication</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <inlineHelpText>What is the user ID format?</inlineHelpText>
        <label>User ID</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WAF_Web_Application_Firewall__c</fullName>
        <label>WAF (Web Application Firewall)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Server_Version__c</fullName>
        <label>Web Server Version</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Worst_Foreseeable_Financial_Impact__c</fullName>
        <label>Worst Foreseeable Financial Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Risk Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Worst_Foreseeable_Financial_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessment</pluralLabel>
    <recordTypes>
        <fullName>High_Level_IT_Application_Risk_Assessment</fullName>
        <active>true</active>
        <label>High Level IT Application Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Assessment</fullName>
        <active>true</active>
        <label>Simple Risk Assessment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>